--- a/UI/src/app/dashboardv2/executive-v2/executive-v2.component.css
+++ b/UI/src/app/dashboardv2/executive-v2/executive-v2.component.css
@@ -51,24 +51,32 @@
 .tabs-container {
     display: flex;
     padding: 0 0.5rem;
-    margin: 0 0 0.5rem 0;
+    margin-left: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .tab {
     background-color: #fff;
     border: 1px solid #D5DBE1;
     display: inline-block;
-    margin-right: 10px;
     font-size: 12px;
     padding: 0 8px 0 8px;
-    border-radius: 5px;
     cursor: pointer;
     height: 33px;
     line-height: 33px;
 }
 
+.tab:first-child {
+    border-top-left-radius: 5px;
+    border-right: none;
+}
+
+.tab:last-child {
+    border-top-right-radius: 5px;
+    border-left: none;
+}
+
 .tab.is-selected {
-    background: var(--color-blue);
-    color: #fff;
-    border-color: #D5DBE1;
+    border-bottom: 2px solid #0B4BC8;
+    font-weight: bold;
 }
