--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -79,7 +79,7 @@
     <div class="kpi-card-body p-pr-5 p-pl-5" [ngStyle]="{'height': kpiSize === 12 ? '250px' : '220px',
     'min-height': !(showChartView === 'table')  ? '220px' : '100px'}" [ngClass]="{'smallChart':board == 'dora'}">
         <!--place for chart to be rendered-->
-        <ng-content *ngIf="trendValueList && trendValueList.length > 0 && !loader; else noData"></ng-content>
+        <ng-content *ngIf="checkIfDataPresent(trendValueList); else noData"></ng-content>
         <ng-template #noData>
             <div class="min-ht" *ngIf="!loader">
                 <div class="p-w-100  p-d-flex p-justify-center">
@@ -87,6 +87,7 @@
                 </div>
                 <div class="p-w-100">
                     <h4 class="p-text-center">No data available. Contact your administrator.</h4>
+                    <div>{{ trendValueList | json }}</div>
                 </div>
             </div>
 
