loader for kpi field mapping

--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.html
@@ -189,7 +189,7 @@
     <ng-container *ngIf=" noDataKPIConfig && !loadingKPIConfig">
         <h2 class="p-text-center">No Configuration Available</h2>
     </ng-container>
-    <ng-container *ngIf="loading">
+    <ng-container *ngIf="loadingKPIConfig">
         <div class="overlay">
             <div class="loading-img"></div>
         </div>
