DTS-37349 NewUI Back to Dashboard - WIP
DTS-37349 NewUI Back to Dashboard

--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -313,7 +313,8 @@
 
 :host ::ng-deep .p-menu.p-menu-overlay {
     top: 40px !important;
-    left: 400px !important;
+    left: initial !important;
+    right: 0;
 }
 
 
