--- a/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
+++ b/UI/src/app/component/tooltip-v2/tooltip-v2.component.css
@@ -10,7 +10,7 @@
     min-width: 180px;
     color: #F5F9FF;
     margin-left: -24px;
-    right: 0;
+    left: 0;
     min-height: 140px;
 }
 :host .tooltip h4{
@@ -32,14 +32,14 @@
     -webkit-appearance: none;
     width: 7px;
   }
-  
+
 .tooltip-wrapper::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: rgba(0, 0, 0, .5);
 }
 .divide {
     width: 100%;
-    height: 1px;        
+    height: 1px;
     border-bottom: 1px dashed #FFF;
 }
 
@@ -97,11 +97,10 @@ ul.kpi-info-list {
 }
 
 .tooltip-kpi::before{
-    left: 200px;
+    left: 28px;
 }
 .tooltip-kpi{
     top: 30px;
-    left: -170px;
     width: 500px !important;
     /* min-width: 550px; */
 }
