--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -23,16 +23,11 @@
         </p-multiSelect>
         <label class="floating-label" for="multiselectFilter">Select {{ selectedLevel }}</label>
     </span>
-    <span *ngIf="primaryFilterConfig['type'] === 'singleSelect' && selectedFilters?.length" class="p-float-label">
+    <span *ngIf="primaryFilterConfig['type'] === 'singleSelect' && selectedFilters?.length === 1" class="p-float-label">
         <p-dropdown inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
             placeholder="Select" optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
             [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv">
-            <ng-template pTemplate="selectedItem">
-                <div class="country-item country-item-value">
-                    <div>{{selectedFilters[0].nodeName}}</div>
-                </div>
-            </ng-template>
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <span>{{ option.nodeName }}</span>
