UI issues, removing filter from KPI filters

--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -333,3 +333,21 @@
 .red {
     color: var(--color-red);
 }
+
+:host ::ng-deep .p-inputtext {
+    font-family: Poppins_Regular, sans-serif;
+    font-size: 12px;
+}
+
+:host ::ng-deep .p-multiselect {
+    border: 1px solid #D5DBE1;
+}
+
+:host ::ng-deep .p-inputtext, :host ::ng-deep .p-multiselect .p-multiselect-label {
+    font-size: 0.75rem;
+} 
+
+:host ::ng-deep .p-multiselect-panel .p-multiselect-items .p-multiselect-item {
+    margin: 5px 0 0 0;
+    word-wrap: break-word;
+}
