--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -27,7 +27,8 @@
         <p-dropdown inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
             placeholder="Select" optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
-            [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv">
+            [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv"
+            [filter]="true">
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <span>{{ option.nodeName }}</span>
