--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -17,7 +17,7 @@
             <ng-template pTemplate="footer">
                 <div class="p-p-3 p-text-right">
                     <p-button label="Apply" (onClick)="applyPrimaryFilters($event)"
-                        [style]="{backgroundColor: '#0B4BC8'}"></p-button>
+                        [style]="{backgroundColor: '#0B4BC8'}" [disabled]="!selectedFilters?.length"></p-button>
                 </div>
             </ng-template>
         </p-multiSelect>
