--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -23,7 +23,7 @@
         </p-multiSelect>
         <label class="floating-label" for="multiselectFilter">Select {{ selectedLevel }}</label>
     </span>
-    <span *ngIf="primaryFilterConfig['type'] === 'singleSelect' && selectedFilters?.length === 1" class="p-float-label">
+    <span *ngIf="primaryFilterConfig && primaryFilterConfig['type'] === 'singleSelect' && selectedFilters?.length" class="p-float-label">
         <p-dropdown inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
             placeholder="Select" optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
