--- a/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/primary-filter/primary-filter.component.html
@@ -23,12 +23,17 @@
         </p-multiSelect>
         <label class="floating-label" for="multiselectFilter">Select {{ selectedLevel }}</label>
     </span>
-    <span *ngIf="primaryFilterConfig && primaryFilterConfig['type'] === 'singleSelect' && selectedFilters?.length" class="p-float-label">
+    <span *ngIf="primaryFilterConfig && primaryFilterConfig['type'] === 'singleSelect'" class="p-float-label">
         <p-dropdown inputId="singleselectFilter" [options]="filters" [(ngModel)]="selectedFilters[0]"
-            placeholder="Select" optionLabel="nodeName"
+            placeholder="Select"  optionLabel="nodeName"
             [style]="{'width':'300px', 'max-width': '100%', 'height': '40px'}" (onChange)="applyPrimaryFilters($event)"
             [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }" [appendTo]="filterDiv"
             [filter]="true">
+            <ng-template pTemplate="selectedItem" *ngIf="selectedFilters?.length">
+                <div class="filter-item-selected">
+                    <span>{{ selectedFilters[0].nodeName  }}</span>
+                </div>
+            </ng-template>
             <ng-template let-option pTemplate="item">
                 <div class="filter-item">
                     <span>{{ option.nodeName }}</span>
