--- a/UI/src/app/component/comments-v2/comments-v2.component.html
+++ b/UI/src/app/component/comments-v2/comments-v2.component.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div *ngIf="dataLoaded; else loader" class="comment-list-container">
-                <ng-container *ngIf="commentCount>0 && commentsList?.length>0; else noComments">
+                <ng-container *ngIf="commentsList?.length; else noComments">
                     <div *ngFor="let comment of commentsList" class="comment-combo p-mr-1">
                         <div class="commented-by">@{{comment?.commentBy}} commented - {{comment?.commentOn}}
                             <span class="icon-delete">
