--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -310,8 +310,8 @@
 
 :host ::ng-deep .p-menu.p-menu-overlay {
   top: 40px !important;
-  left: initial !important;
-  right: 0;
+  /* left: initial !important;
+  right: 0; */
 }
 
 
