--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -3,7 +3,7 @@
         <span class="p-float-label"
             *ngIf="filterData?.length && filterData[i]?.length && config['type'] !== 'singleSelect'"
             style="margin-left: 10px;">
-            <p-multiSelect #multiSelect inputId="multiselectFilter"
+            <p-multiSelect #multiSelect inputId="multiselectFilter" [disabled]="config.defaultLevel.labelName === 'sqd' && selectedTrends?.length > 1"
                 [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}" [selectionLimit]="6"
                 defaultLabel="Select" [optionLabel]="'nodeName'" [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }"
                 [appendTo]="addnlFilterDiv" [(ngModel)]="selectedFilters[i]" [options]="filterData[i]">
