--- a/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
+++ b/UI/src/app/dashboardv2/kpi-card-v2/kpi-card-v2.component.css
@@ -366,3 +366,8 @@
     margin: 5px 0 0 0;
     word-wrap: break-word;
 }
+
+:host ::ng-deep .p-menu.p-component.p-menu-overlay {
+    left: unset !important;
+    right: 10px !important;
+}
