--- a/UI/src/app/config/advanced-settings/advanced-settings.component.css
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.css
@@ -42,6 +42,11 @@ div.main {
   min-width: 60px;
 }
 
+.status-container.pending {
+  background-color: #FFBF00;
+  border: 1px solid #FFBF00;
+}
+
 .status-container.inactive {
   background-color: #ea6a47;
   border: 1px solid #ea6a47;
