--- a/UI/src/app/config/advanced-settings/advanced-settings.component.html
+++ b/UI/src/app/config/advanced-settings/advanced-settings.component.html
@@ -96,7 +96,11 @@
                   
                   <div class="p-d-flex p-align-center" *ngIf="(!findTraceLogForTool(processor.processorName)?.executionOngoing && processor.processorName === 'Jira') || processor.processorName !== 'Jira'">
                     <div *ngIf="showProcessorLastState(processor.processorName) !== 'NA'" class="status-container"
-                      [ngClass]="showProcessorLastState(processor.processorName) === 'Success' ? 'active' : 'inactive'">
+                      [ngClass]="{
+                        'active': showProcessorLastState(processor.processorName) === 'Success',
+                        'inactive': showProcessorLastState(processor.processorName) === 'Failure',
+                        'pending': showProcessorLastState(processor.processorName) === 'Warning'
+                      }">
                       {{ showProcessorLastState(processor.processorName)}}
                     </div>
                     <span *ngIf="showProcessorLastState(processor.processorName) === 'NA'">NA</span>
@@ -105,12 +109,16 @@
                   <i class="pi pi-info-circle" [ngClass]="{'disabled': !(findTraceLogForTool('Jira')?.progressStatusList?.length || findTraceLogForTool('Jira')?.errorMessage)}"
                   (click)="(findTraceLogForTool('Jira')?.errorMessage || findTraceLogForTool('Jira')?.progressStatusList?.length) ? op.toggle($event) : ''" style="font-size: 1.2rem"></i>
                 </div>
+                <div class="p-ml-2" *ngIf="processor.processorName === 'RepoTool' && showProcessorLastState(processor.processorName) === 'Warning'">
+                  <i class="pi pi-info-circle"
+                  (click)="rOp.toggle($event)" style="font-size: 1.2rem"></i>
+                </div>
               </div>
               </td>
               <td class='custom-table-cell p-d-flex p-align-center column-width'>
                 <button pButton pRipple label="Run Now"
                   icon="{{findTraceLogForTool(processor.processorName)?.executionOngoing === true ? 'pi pi-spin pi-spinner' : 'pi pi-forward'}}"
-                  [disabled]="(shouldDisableRunProcessor() || findTraceLogForTool(processor.processorName)?.executionOngoing === true) && processor.processorName !== 'Jira'  "
+                  [disabled]="(shouldDisableRunProcessor() || findTraceLogForTool(processor.processorName)?.executionOngoing === true) && processor.processorName !== 'Jira' || (processor.processorName === 'RepoTool' && showProcessorLastState(processor.processorName) === 'Warning')"
                   class="p-button-sm p-button-success p-button-raised" (click)="runProcessor(processor.processorName)"></button>
                   <div  class="action-btns p-ml-3" [ngClass]="{'disabled':!(getToolDetailsForProcessor(processor?.processorName)?.length > 0 && findTraceLogForTool(processor?.processorName)) || findTraceLogForTool(processor?.processorName)?.isDeleteDisable}" *ngIf="!shouldDisableRunProcessor()"><i class="far fa-trash-alt" (click)="deleteProcessorData(processor)"></i></div>
               </td>
@@ -180,3 +188,8 @@
     </ul>
   </div>
 </p-overlayPanel>
+
+<p-overlayPanel #rOp [showCloseIcon]="false">
+  Reached the rate limit. Repo scanning will automatically resume after {{ getRepoToolTimeDetails() }}
+</p-overlayPanel>
+
