--- a/UI/src/app/dashboard/iteration/iteration.component.css
+++ b/UI/src/app/dashboard/iteration/iteration.component.css
@@ -219,9 +219,9 @@ padding: 0.75rem !important;
 :host::ng-deep.kpi-table.p-datatable .p-datatable-thead > tr > th{
     top: 0;
     position: sticky;
-    /* z-index: 1; */
+    /* z-index: 1; 
     padding: 0px;
-    border: none;
+    border: none;*/
 }
 
 :host::ng-deep.kpi-table.p-datatable .p-datatable-thead > tr > th.dragged{
