DTS-38257_Duration-RemainingDays
Hiding capacity and if no sprint then hide the entire container

--- a/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/filter-new.component.html
@@ -61,11 +61,11 @@
       <span class="text-container p-d-inline-block p-mr-2">Duration:</span>
       <span class="p-text-bold p-d-inline-block data-container p-mr-3">{{combinedDate}}</span>
     </div>
-    <div class="p-d-inline-block p-mr-2">
+    <!-- <div class="p-d-inline-block p-mr-2">
       <span class="icon-container p-d-inline-block p-mr-2"><i class="pi pi-chart-line"></i></span>
       <span class="text-container p-d-inline-block p-mr-2">Capacity:</span>
       <span class="p-text-bold p-d-inline-block data-container p-mr-3">NA</span>
-    </div>
+    </div> -->
   </div>
   <div class="date-filter-container">
     <!-- Date filter start -->
