--- a/UI/src/app/dashboardv2/header-v2/header.component.html
+++ b/UI/src/app/dashboardv2/header-v2/header.component.html
@@ -2,7 +2,7 @@
     <nav class="p-d-flex p-align-center p-jc-between">
         <div class="logo p-pt-1 p-pb-1 p-d-flex p-align-center">
             <!-- <img *ngIf="clientLogo" src={{clientLogo}} (click)="navigateToHomePage()" alt="Logo" /> -->
-            <img src="assets/img/ps-logo.svg" (click)="navigateToHomePage()" alt="Logo" />
+            <img src="assets/img/ps-logo.svg" alt="Logo" />
         </div>
 
         <!-- <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu> -->
