--- a/UI/src/app/dashboardv2/header-v2/header.component.html
+++ b/UI/src/app/dashboardv2/header-v2/header.component.html
@@ -1,66 +1,47 @@
 <header class="">
-    <nav class="p-d-flex p-align-center p-jc-between">
-        <div class="logo p-pt-1 p-pb-1 p-d-flex p-align-center">
-            <!-- <img *ngIf="clientLogo" src={{clientLogo}} (click)="navigateToHomePage()" alt="Logo" /> -->
-            <img src="assets/img/ps-logo.svg" alt="Logo" />
+  <nav class="p-d-flex p-align-center p-jc-between">
+    <div class="logo p-pt-1 p-pb-1 p-d-flex p-align-center">
+      <img src="assets/img/ps-logo.svg" alt="Logo" />
+    </div>
+
+    <div class="p-d-flex p-align-center p-p-1">
+
+      <app-recent-comments></app-recent-comments>
+
+      <div class="p-p-2 rounded p-mr-3 position-relative filter-btn" role="button"
+        (click)="notification.toggle($event)">
+        <img src="../../../assets/img/ico-notifications.svg" alt="Notification" />
+        <span *ngIf="notificationCount > 0" class="count noti-count">{{notificationCount}}</span>
+      </div>
+      <p-menu #notification [popup]="true" [model]="notificationList" class="custom-menu"></p-menu>
+
+      <div class="back-btn-wraper">
+        <div *ngIf="router.url.split('/').includes('Config') || router.url.split('/').includes('Help')"
+          class="back-btn-container rounded p-mr-3">
+          <button pButton pRipple class="back-btn" [disabled]="backToDashboardLoader" routerLinkActive="active"
+            icon="{{ backToDashboardLoader ? 'pi pi-spin pi-spinner' : '' }}" iconPos="left" label="BACK TO DASHBOARD"
+            (click)="navigateToDashboard()"></button>
         </div>
+      </div>
 
-        <!-- <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu> -->
-
-        <div class="p-d-flex p-align-center p-p-1">
-            <!-- <div class="last-sync-date-block" *ngIf="selectedTab?.toLowerCase() === 'iteration'">
-                <div class="p-d-flex p-align-center p-jc-end">
-                   <img *ngIf="selectedProjectLastSyncStatus === 'SUCCESS'" src="../../../assets/img/icon-success.svg" alt="Success" class="p-mr-1"/>
-                   <img *ngIf="!((lastSyncData | json) == '{}') && !lastSyncData?.fetchSuccessful && !lastSyncData?.errorInFetch" src="../../../assets/img/icon-time.svg" alt="Time" class="p-mr-1" />
-                   <img *ngIf="selectedProjectLastSyncStatus === 'FAILURE'" src="../../../assets/img/icon-failure.svg" alt="Failure" class="p-mr-1" />
-                   <h4 class="label-text p-text-right p-mt-0 p-mb-0 p-mr-2">
-                      Last Sync
-                   </h4>
-
-                </div>
-                <p class="last-sync-date p-m-0 p-text-right">
-                   {{selectedProjectLastSyncDate != 'NA' ? (selectedProjectLastSyncDate | date :'dd-MMM-yyyy (EEE) h:mm:ss a') : 'NA' }}
-                </p>
-            </div> -->
-            <app-recent-comments></app-recent-comments>
-            <!-- <div class="p-p-2 rounded p-mr-3 position-relative filter-btn" role="button" (click)="getRecentComments()">
-                <img src="../../../assets/img/ico-comments.svg" alt="Comment" />
-                <span *ngIf="commentCount > 0" class="count">{{commentCount}}</span>
-            </div>
-            <p-menu [popup]="true" [model]="commentList"></p-menu> -->
-
-            <div class="p-p-2 rounded p-mr-3 position-relative filter-btn" role="button" (click)="notification.toggle($event)">
-                <img src="../../../assets/img/ico-notifications.svg" alt="Notification" />
-                <span *ngIf="notificationCount > 0" class="count noti-count">{{notificationCount}}</span>
-            </div>
-            <p-menu #notification [popup]="true" [model]="notificationList" class="custom-menu"></p-menu>
-
-            <div class="back-btn-wraper">
-              <div *ngIf="router.url.split('/').includes('Config') || router.url.split('/').includes('Help')" class="back-btn-container rounded p-mr-3">
-                 <button pButton pRipple class="back-btn" [disabled] = "backToDashboardLoader" routerLinkActive="active" icon="{{ backToDashboardLoader ? 'pi pi-spin pi-spinner' : '' }}" iconPos="left" label="BACK TO DASHBOARD" (click)="navigateToDashboard()"></button>
-              </div>
-            </div>
-
-            <div class="p-d-flex p-align-center p-jc-between" role="button" (click)="usermenu.toggle($event)">
-                <i class="far fa-user custom-user p-ml-2 p-mr-2"></i>
-                <div class="cursor-pointer">
-                    <div>
-                        {{userDetails['user_name']}}
-                    </div>
-                    <p class="p-mt-0 p-mb-0 profile-budge">{{userDetails['authorities']?.length>0 ? userDetails['authorities'][0] : ''}}</p>
-                </div>
-            </div>
-            <p-menu #usermenu [popup]="true" [model]="userMenuItems">
-                <ng-template pTemplate="item" let-item>
-                        <div>
-                            <i [class]="item.icon"></i>
-                            <span> {{ item.label }}</span>
-                        </div>
-                </ng-template>
-            </p-menu>
+      <div class="p-d-flex p-align-center p-jc-between" role="button" (click)="usermenu.toggle($event)">
+        <i class="far fa-user custom-user p-ml-2 p-mr-2"></i>
+        <div class="cursor-pointer">
+          <div>
+            {{userDetails['user_name']}}
+          </div>
+          <p class="p-mt-0 p-mb-0 profile-budge">{{userDetails['authorities']?.length>0 ? userDetails['authorities'][0]
+            : ''}}</p>
         </div>
-    </nav>
-
-
-
+      </div>
+      <p-menu #usermenu [popup]="true" [model]="userMenuItems">
+        <ng-template pTemplate="item" let-item>
+          <div>
+            <i [class]="item.icon"></i>
+            <span> {{ item.label }}</span>
+          </div>
+        </ng-template>
+      </p-menu>
+    </div>
+  </nav>
 </header>
