--- a/UI/src/app/dashboard/developer/developer.component.html
+++ b/UI/src/app/dashboard/developer/developer.component.html
@@ -115,6 +115,6 @@
     </ng-template>
 
     <app-export-excel #exportExcel></app-export-excel>
-    <ng-container *ngIf="(filterApplyData?.label == 'project' || filterApplyData?.label == 'sprint') && filterApplyData?.ids?.length == 1">
+    <ng-container *ngIf="isRecommendationsEnabled && (filterApplyData?.label == 'project' || filterApplyData?.label == 'sprint') && filterApplyData?.ids?.length == 1">
       <app-recommendations [filterData]="filterApplyData" [kpiList]="kpiList"></app-recommendations>
     </ng-container>
