--- a/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
+++ b/UI/src/app/dashboardv2/filter-v2/additional-filter/additional-filter.component.html
@@ -4,10 +4,9 @@
             *ngIf="filterData?.length && filterData[i]?.length && config['type'] !== 'singleSelect'"
             style="margin-left: 10px;">
             <p-multiSelect #multiSelect inputId="multiselectFilter" [disabled]="config.defaultLevel.labelName === 'sqd' && selectedTrends?.length > 1"
-                [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}" [selectionLimit]="6"
+                [style]="{'width':'200px', 'max-width': '100%', 'height': '40px'}"
                 defaultLabel="Select" [optionLabel]="'nodeName'" [panelStyle]="{ 'min-width': 'min(100vw, 400px)' }"
-                [appendTo]="addnlFilterDiv" [(ngModel)]="selectedFilters[i]" [options]="filterData[i]"
-                [selectionLimit]="6">
+                [appendTo]="addnlFilterDiv" [(ngModel)]="selectedFilters[i]" [options]="filterData[i]">
                 <ng-template pTemplate="footer">
                     <div class="p-p-3 p-text-right">
                         <p-button label="Apply" (onClick)="applyAdditionalFilter(selectedFilters, i + 1, true)"
